--- a/tianana-app/tsconfig.base.json
+++ b/tianana-app/tsconfig.base.json
@@ -4,10 +4,12 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "rootDir": "./src",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "allowJs": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
